--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@ h3 {
     padding: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     line-height: 18px;
-    height: 40px;
+    height: 90px;
     margin-bottom: 40px;
     width: 200px;
 }
@@ -39,4 +39,25 @@ h3 {
     width: 10px;
     height: 10px;
     margin-right: 5px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+table, th {
+    border: 1px solid white;
 }
