--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,10 +51,13 @@ th, td {
     padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even){
+    background-color: rgba(165, 0, 0, 0.7);
+    color: white;
+}
 
 th {
-    background-color: #4CAF50;
+    background-color: rgba(197, 74, 12, 0.7);
     color: white;
 }
 
