--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,9 +12,49 @@ h3 {
     right: 0;
     background: rgba(255, 255, 255, 0.8);
     margin-right: 20px;
+    padding-top: 20px;
     font-family: Arial, sans-serif;
     overflow: auto;
     border-radius: 3px;
+}
+
+#legend-text {
+    display: block;
+}
+
+#legend {
+    left: 0;
+    height: 190px;
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
+    margin-left: 20px;
+    margin-bottom: 40px;
+    width: 130px;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+#filter {
+    left: 0;
+    top: 20px;
+    height: 400px;
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
+    margin-left: 20px;
+    margin-bottom: 40px;
+    width: 70px;
+    display: inline-block;
+    border-radius: 3px;
+}
+
+.legend-key {
+    display: inline-block;
+    border-radius: 20%;
+    width: 10px;
+    height: 10px;
+    margin-right: 5px;
 }
 
 #features {
@@ -24,7 +64,7 @@ h3 {
     width: 400px;
 }
 
-#legend {
+#data-switch {
     padding: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     line-height: 18px;
