--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,8 @@ h3 {
     top: 0;
     height: 250px;
     margin-top: 20px;
-    width: 400px;
+    padding-left: 20px;
+    width: 600px;
 }
 
 #data-switch {
